# sdetector

./: CMakeLists.txt  README.md  build.sh  build64.bat
src/application/: CMakeLists.txt  client.cpp  client.h  files_processor.cpp  files_processor.h  main.cpp  mainwindow.cpp  mainwindow.h  process.h  view.cpp  view.h
src/common/: common.h  config.h  config.h.in  socket.cpp  socket.h  usepool.cpp  usepool.h
src/scanner/: CMakeLists.txt  cmdline.cpp  cmdline.h  daemon.cpp  daemon.h  log.h  logto.h  malware_list.cpp  malware_list.h  mmfile.cpp  mmfile.h  scanner.cpp  seeker.cpp  seeker.h  server.cpp  server.h
src/test/: CMakeLists.txt  testBMSeeker.cpp  testClient.cpp  testMalwareList.cpp
